# deep-learning-with-python-notebooks

./: pyproject.toml
first_edition/: 3.5-classifying-movie-reviews.ipynb  3.6-classifying-newswires.ipynb  3.7-predicting-house-prices.ipynb
